# Dynamic-Sliders-ComfyUI

./: LICENSE  README.md  __init__.py  function and behaviors of nodes.txt  pyproject.toml  slider_receiver_node.py  slider_stacker_node.py
Dynamic_Slider_Pack/: __init__.py
Dynamic_Slider_Pack/nodes/: dynamic_sliders_stack.py  stack_receiver.py
js/: Dynamic.js  appearance.js  context.js  slider_stacker_widget_hider.js
web/js/: dynamic_sliders.js
